// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle re-activation 1`] = `
<Modal
  contentLabel="coding_rules.create_custom_rule"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        coding_rules.create_custom_rule
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <Alert
        variant="warning"
      >
        coding_rules.reactivate.help
      </Alert>
      <MandatoryFieldsExplanation
        className="spacer-bottom"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="coding-rules-custom-rule-creation-name"
        >
          name
           
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          disabled={false}
          id="coding-rules-custom-rule-creation-name"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="coding-rules-custom-rule-creation-key"
        >
          key
           
          <MandatoryFieldMarker />
        </label>
        <input
          disabled={false}
          id="coding-rules-custom-rule-creation-key"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="display-flex-space-between"
      >
        <div
          className="modal-field flex-1 spacer-right"
        >
          <label
            id="coding-rules-custom-rule-type"
          >
            type
          </label>
          <Select
            aria-labelledby="coding-rules-custom-rule-type"
            components={
              {
                "Option": [Function],
                "SingleValue": [Function],
              }
            }
            isClearable={false}
            isDisabled={false}
            isSearchable={false}
            onChange={[Function]}
            options={
              [
                {
                  "label": "issue.type.BUG",
                  "value": "BUG",
                },
                {
                  "label": "issue.type.VULNERABILITY",
                  "value": "VULNERABILITY",
                },
                {
                  "label": "issue.type.CODE_SMELL",
                  "value": "CODE_SMELL",
                },
                {
                  "label": "issue.type.SECURITY_HOTSPOT",
                  "value": "SECURITY_HOTSPOT",
                },
              ]
            }
            value={
              {
                "label": "issue.type.BUG",
                "value": "BUG",
              }
            }
          />
        </div>
        <div
          className="modal-field flex-1 spacer-right"
        >
          <label
            id="coding-rules-custom-rule-severity"
          >
            severity
          </label>
          <SeveritySelect
            ariaLabelledby="coding-rules-custom-rule-severity"
            isDisabled={false}
            onChange={[Function]}
            severity="MAJOR"
          />
        </div>
        <div
          className="modal-field flex-1"
        >
          <label
            id="coding-rules-custom-rule-status"
          >
            coding_rules.filters.status
          </label>
          <Select
            aria-labelledby="coding-rules-custom-rule-status"
            isClearable={false}
            isDisabled={false}
            isSearchable={false}
            onChange={[Function]}
            options={
              [
                {
                  "label": "rules.status.READY",
                  "value": "READY",
                },
                {
                  "label": "rules.status.BETA",
                  "value": "BETA",
                },
                {
                  "label": "rules.status.DEPRECATED",
                  "value": "DEPRECATED",
                },
              ]
            }
            value={
              {
                "label": "rules.status.READY",
                "value": "READY",
              }
            }
          />
        </div>
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="coding-rules-custom-rule-creation-html-description"
        >
          description
          <MandatoryFieldMarker />
        </label>
        <textarea
          disabled={false}
          id="coding-rules-custom-rule-creation-html-description"
          onChange={[Function]}
          required={true}
          rows={5}
          value=""
        />
        <FormattingTips
          className="modal-field-descriptor text-right"
        />
      </div>
      <div
        className="modal-field"
        key="1"
      >
        <label
          className="capitalize"
          htmlFor="1"
        >
          1
        </label>
        <input
          disabled={false}
          id="1"
          name="1"
          onChange={[Function]}
          placeholder="1"
          type="text"
          value=""
        />
        <SafeHTMLInjection
          htmlAsString="description"
          sanitizeLevel={1}
        >
          <div
            className="modal-field-description"
          />
        </SafeHTMLInjection>
      </div>
      <div
        className="modal-field"
        key="2"
      >
        <label
          className="capitalize"
          htmlFor="2"
        >
          2
        </label>
        <textarea
          disabled={false}
          id="2"
          name="2"
          onChange={[Function]}
          placeholder="1"
          rows={3}
          value=""
        />
      </div>
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
      >
        coding_rules.reactivate
      </SubmitButton>
      <ResetButtonLink
        disabled={false}
        id="coding-rules-custom-rule-creation-cancel"
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly: default 1`] = `
<Modal
  contentLabel="coding_rules.create_custom_rule"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        coding_rules.create_custom_rule
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <MandatoryFieldsExplanation
        className="spacer-bottom"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="coding-rules-custom-rule-creation-name"
        >
          name
           
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          disabled={false}
          id="coding-rules-custom-rule-creation-name"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="coding-rules-custom-rule-creation-key"
        >
          key
           
          <MandatoryFieldMarker />
        </label>
        <input
          disabled={false}
          id="coding-rules-custom-rule-creation-key"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="display-flex-space-between"
      >
        <div
          className="modal-field flex-1 spacer-right"
        >
          <label
            id="coding-rules-custom-rule-type"
          >
            type
          </label>
          <Select
            aria-labelledby="coding-rules-custom-rule-type"
            components={
              {
                "Option": [Function],
                "SingleValue": [Function],
              }
            }
            isClearable={false}
            isDisabled={false}
            isSearchable={false}
            onChange={[Function]}
            options={
              [
                {
                  "label": "issue.type.BUG",
                  "value": "BUG",
                },
                {
                  "label": "issue.type.VULNERABILITY",
                  "value": "VULNERABILITY",
                },
                {
                  "label": "issue.type.CODE_SMELL",
                  "value": "CODE_SMELL",
                },
                {
                  "label": "issue.type.SECURITY_HOTSPOT",
                  "value": "SECURITY_HOTSPOT",
                },
              ]
            }
            value={
              {
                "label": "issue.type.BUG",
                "value": "BUG",
              }
            }
          />
        </div>
        <div
          className="modal-field flex-1 spacer-right"
        >
          <label
            id="coding-rules-custom-rule-severity"
          >
            severity
          </label>
          <SeveritySelect
            ariaLabelledby="coding-rules-custom-rule-severity"
            isDisabled={false}
            onChange={[Function]}
            severity="MAJOR"
          />
        </div>
        <div
          className="modal-field flex-1"
        >
          <label
            id="coding-rules-custom-rule-status"
          >
            coding_rules.filters.status
          </label>
          <Select
            aria-labelledby="coding-rules-custom-rule-status"
            isClearable={false}
            isDisabled={false}
            isSearchable={false}
            onChange={[Function]}
            options={
              [
                {
                  "label": "rules.status.READY",
                  "value": "READY",
                },
                {
                  "label": "rules.status.BETA",
                  "value": "BETA",
                },
                {
                  "label": "rules.status.DEPRECATED",
                  "value": "DEPRECATED",
                },
              ]
            }
            value={
              {
                "label": "rules.status.READY",
                "value": "READY",
              }
            }
          />
        </div>
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="coding-rules-custom-rule-creation-html-description"
        >
          description
          <MandatoryFieldMarker />
        </label>
        <textarea
          disabled={false}
          id="coding-rules-custom-rule-creation-html-description"
          onChange={[Function]}
          required={true}
          rows={5}
          value=""
        />
        <FormattingTips
          className="modal-field-descriptor text-right"
        />
      </div>
      <div
        className="modal-field"
        key="1"
      >
        <label
          className="capitalize"
          htmlFor="1"
        >
          1
        </label>
        <input
          disabled={false}
          id="1"
          name="1"
          onChange={[Function]}
          placeholder="1"
          type="text"
          value=""
        />
        <SafeHTMLInjection
          htmlAsString="description"
          sanitizeLevel={1}
        >
          <div
            className="modal-field-description"
          />
        </SafeHTMLInjection>
      </div>
      <div
        className="modal-field"
        key="2"
      >
        <label
          className="capitalize"
          htmlFor="2"
        >
          2
        </label>
        <textarea
          disabled={false}
          id="2"
          name="2"
          onChange={[Function]}
          placeholder="1"
          rows={3}
          value=""
        />
      </div>
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
      >
        create
      </SubmitButton>
      <ResetButtonLink
        disabled={false}
        id="coding-rules-custom-rule-creation-cancel"
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;
